tox: add a "package" environment to assist with deployment
Helps generate a deployment package.
Run "tox -e package" and the resulting package.zip is ready for
upload to AWS.

The deployment package is created using pip.

--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,27 @@ deps=
 commands=pytest {posargs}
 whitelist_externals=sh
 
+# Create a lambda deployment package.
+[testenv:package]
+skip_install=true
+deps=
+whitelist_externals=
+    sh
+    rm
+    cp
+commands=
+    rm -rf ./package
+
+    # --no-deps to avoid using anything untrusted from PyPI;
+    # currently all deps are expected to be available from lambda runtime anyway.
+    pip install --no-deps --target ./package .
+
+    # Always using hardcoded config for now.
+    cp cdn_lambda/functions/map_to_s3/map_to_s3.json package
+
+    sh -c 'cd package && zip -r ../package.zip .'
+    rm -rf ./package
+
 [testenv:static]
 deps=
 	-rtest-requirements.txt
