Manage and bundle exact dependency versions
Previously, the package produced by "tox -e package" did not
bundle any dependencies.  Although this worked, let's start
bundling dependencies instead and managing their versions,
for a couple of reasons:

- It turns out this is actually the recommended practice even
  for deps such as boto3, despite the lambda runtime providing
  a copy of it; although there is much confusion on this point.
  See [1] for a discussion about this.

- If we don't bundle dependencies, then we have no way to roll
  back changes to those dependencies. This puts us at risk if
  the lambda runtime updates a dependency in a manner such that
  our code stops working.

- We'll likely want to introduce dependencies on some other
  packages owned by ourselves at some point, so let's figure out
  how to do that securely. Declaring dependencies with --hash
  and letting dependabot update them seems to achieve this, and
  dependabot supports updating those automatically while
  maintaining hashes.

For that last point, the version of boto3 included here was
deliberately chosen as a slightly older release, so that we can
try having dependabot update the dependency.

[1] https://www.serverlessops.io/blog/aws-lambda-and-python-boto3-bundling

--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,9 @@ envlist = py36, static, docs
 [testenv]
 deps=
 	-rrequirements.txt
-	-rtest-requirements.txt
+# Two-phase install is used so that requirements.txt can use hashes
+# without also forcing test-requirements.txt to use hashes.
+commands_pre=python -m pip install -rtest-requirements.txt
 commands=pytest {posargs}
 whitelist_externals=sh
 
@@ -16,11 +18,12 @@ whitelist_externals=
     sh
     rm
     cp
+commands_pre=
 commands=
     rm -rf ./package
 
-    # --no-deps to avoid using anything untrusted from PyPI;
-    # currently all deps are expected to be available from lambda runtime anyway.
+    # --require-hashes and then --no-deps to avoid using anything untrusted from PyPI
+    pip install --require-hashes -r requirements.txt --target ./package
     pip install --no-deps --target ./package .
 
     # Always using hardcoded config for now.
@@ -34,6 +37,7 @@ deps=
 	-rtest-requirements.txt
 	black
 	pylint
+commands_pre=
 commands=
 	black --check .
 	sh -c 'pylint cdn_lambda; test $(( $? & (1|2|4|32) )) = 0'
@@ -43,6 +47,7 @@ deps=
 	-rtest-requirements.txt
 	pytest-cov
 usedevelop=true
+commands_pre=
 commands=
 	pytest --cov-report=html --cov=cdn_lambda {posargs}
 
@@ -53,6 +58,7 @@ deps=
 	pytest-cov
 	coveralls
 usedevelop=true
+commands_pre=
 commands=
 	pytest --cov=cdn_lambda {posargs}
 	coveralls
@@ -62,6 +68,7 @@ deps=
 	sphinx
 	alabaster
 use_develop=true
+commands_pre=
 commands=
 	sphinx-build -M html docs docs/_build
 
