Add origin_response lambda function
The origin_response function appends a configurable "Cache-Control: max_age=<value>" header to a subset of HTTP responses from the origin server.

Resolves: DELIVERY-8986

--- a/cdn_lambda/functions/lambda_config.json
+++ b/cdn_lambda/functions/lambda_config.json
@@ -6,5 +6,8 @@
   "uri_aliases": [
     ["/content/origin/", "/origin/"],
     ["/origin/rpm/", "/origin/rpms/"]
-  ]
+  ],
+  "headers": {
+    "max_age": "600"
+  }
 }
