--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,8 @@ jobs:
     env: TOX_ENV=static
   - python: "3.6"
     env: TOX_ENV=docs
+  - python: "3.6"
+    env: TOX_ENV=package
 
 script: tox -e $TOX_ENV
 
