docs: add Architecture page with diagram and summary of components
Adds a new page to the online docs which contain an overview of
how all the components fit together, plus a description.
It is hoped to serve as a useful entry point for someone trying
to learn what this project is about.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,12 @@ os: linux
 
 language: python
 
+addons:
+  apt:
+    packages:
+    # for docs
+    - graphviz
+
 install: pip install tox
 
 jobs:
