Rename cdn-lambda => exodus-lambda [2/2]
This commit mainly renames the cdn_lambda module to exodus_lambda.

--- a/tox.ini
+++ b/tox.ini
@@ -27,7 +27,7 @@ commands=
     pip install --no-deps --target ./package .
 
     # Always using hardcoded config for now.
-    cp cdn_lambda/functions/lambda_config.json package
+    cp exodus_lambda/functions/lambda_config.json package
 
     sh -c 'cd package && zip -r ../package.zip .'
     rm -rf ./package
@@ -40,7 +40,7 @@ deps=
 commands_pre=
 commands=
 	black --check .
-	sh -c 'pylint cdn_lambda; test $(( $? & (1|2|4|32) )) = 0'
+	sh -c 'pylint exodus_lambda; test $(( $? & (1|2|4|32) )) = 0'
 
 [testenv:cov]
 deps=
@@ -49,7 +49,7 @@ deps=
 usedevelop=true
 commands_pre=
 commands=
-	pytest --cov-report=html --cov=cdn_lambda {posargs}
+	pytest --cov-report=html --cov=exodus_lambda {posargs}
 
 [testenv:cov-travis]
 passenv = TRAVIS TRAVIS_*
@@ -60,7 +60,7 @@ deps=
 usedevelop=true
 commands_pre=
 commands=
-	pytest --cov=cdn_lambda {posargs}
+	pytest --cov=exodus_lambda {posargs}
 	coveralls
 
 [testenv:docs]
