--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -7,3 +7,8 @@ update_configs:
   # Create pull requests automatically for any security fixes
   - match:
       update_type: security
+
+  # Create pull requests automatically for any releases to
+  # other projects owned by us
+  - match:
+      dependency_name: cdn-definitions
