--- a/configuration/exodus-storage.yaml
+++ b/configuration/exodus-storage.yaml
@@ -19,18 +19,14 @@ Resources:
     Properties:
       TableName: !Sub exodus-cdn-${env}
       AttributeDefinitions:
-        -
-          AttributeName: web_uri
+        - AttributeName: web_uri
           AttributeType: S
-        -
-          AttributeName: from_date
+        - AttributeName: from_date
           AttributeType: S
       KeySchema:
-        -
-          AttributeName: web_uri
+        - AttributeName: web_uri
           KeyType: HASH
-        -
-          AttributeName: from_date
+        - AttributeName: from_date
           KeyType: RANGE
       BillingMode: PROVISIONED
       ProvisionedThroughput:
@@ -56,17 +52,14 @@ Resources:
       Bucket: !Ref Bucket
       PolicyDocument:
         Statement:
-          -
-            Action:
-              -
-                s3:GetObject
+          - Action:
+              - s3:GetObject
             Effect: Allow
             Resource:
               !Join
                 - ""
                 -
-                  -
-                    !GetAtt Bucket.Arn
+                  - !GetAtt Bucket.Arn
                   - "/*"
             Principal:
               CanonicalUser: !GetAtt OriginAccessIdentity.S3CanonicalUserId
