Add buildspec.yml for AWS CodeBuild [RHELDST-20, RHELDST-24]
This commit introduces a buildspec.yml file and a build-package script
to provide to AWS CodeBuild during the build phase of the exodus
CodePipeline. CodeBuild packages the exodus Lambda@Edge code into a
deployable CloudFormation template.

Additionally, the Lambda@Edge function configuration is dynamically
generated during the Build phase.

--- a/configuration/lambda_config.json
+++ b/configuration/lambda_config.json
@@ -1,7 +1,7 @@
 {
   "table": {
-    "name": "exodus",
-    "region": "us-east-1"
+    "name": "exodus-cdn-$ENV_TYPE",
+    "region": "$AWS_REGION"
   },
   "headers": {
     "max_age": "600"
