Enable configuration of exodus-lambda loggers [RHELDST-662]
The loggers are configured using a config file in the deployment package.
The levels and formatting of the loggers may be configured in accordance
with the logging.config.dictConfig documentation.

By default, the current behavior of the loggers is maintained; the
loggers are configured to log messages at the warning level and higher.

Additionally, the LambdaBase class' conf_file parameter now also accepts a
dict. The user can pass in a path to the lambda's config file, or a dict
containing the lambda's config.

--- a/configuration/lambda_config.json
+++ b/configuration/lambda_config.json
@@ -12,5 +12,27 @@
   },
   "headers": {
     "max_age": "600"
+  },
+  "logging": {
+    "version": 1,
+    "incremental": "True",
+    "disable_existing_loggers": "False",
+    "formatters": {
+      "default": {
+        "format": "%(asctime)s - %(levelname)s - %(aws_request_id)s - %(message)s\n",
+        "datefmt": "%Y-%m-%d %H:%M:%S"
+      }
+    },
+    "loggers": {
+      "origin-response": {
+        "level": "WARNING"
+      },
+      "origin-request": {
+        "level": "WARNING"
+      },
+      "default": {
+        "level": "WARNING"
+      }
+    }
   }
 }
