Enable multiple table regions in config, origin_request [RHELDST-663]
This commit adds a list of available AWS service endpoints (regions) to
lambda_config.json. The origin_request function will use the first of
the listed regions if an unavailable or invalid region is specified in
the environment variables.

--- a/configuration/lambda_config.json
+++ b/configuration/lambda_config.json
@@ -1,7 +1,14 @@
 {
   "table": {
     "name": "exodus-cdn-$ENV_TYPE",
-    "region": "$AWS_REGION"
+    "available_regions": [
+      "us-east-1",
+      "us-west-1",
+      "ap-east-1",
+      "ap-south-1",
+      "ap-southeast-2",
+      "eu-central-1"
+    ]
   },
   "headers": {
     "max_age": "600"
