--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
-envlist = py36, static, docs
+envlist = py37, static, docs
 
 [testenv]
 deps=
 	-rrequirements.txt
-# Two-phase install is used so that requirements.txt can use hashes
-# without also forcing test-requirements.txt to use hashes.
-commands_pre=python -m pip install -rtest-requirements.txt
+	-rtest-requirements.txt
 commands=pytest {posargs}
 whitelist_externals=sh
 
@@ -34,7 +32,6 @@ commands=
 
 [testenv:static]
 deps=
-	-rtest-requirements.txt
 	black
 	pylint
 commands_pre=
@@ -44,8 +41,8 @@ commands=
 
 [testenv:cov]
 deps=
-	-rtest-requirements.txt
 	pytest-cov
+	coveralls
 usedevelop=true
 commands_pre=
 commands=
@@ -54,11 +51,11 @@ commands=
 [testenv:cov-travis]
 passenv = TRAVIS TRAVIS_*
 deps=
-	-rtest-requirements.txt
 	pytest-cov
 	coveralls
 usedevelop=true
 commands_pre=
+	python -m pip install --require-hashes -rrequirements.txt -rtest-requirements.txt
 commands=
 	pytest --cov=exodus_lambda {posargs}
 	coveralls
@@ -75,3 +72,12 @@ commands=
 [pytest]
 testpaths = tests
 addopts = -v
+
+[testenv:integration-tests]
+envlist = py37
+passenv = *
+deps=
+	-rrequirements.txt
+	-rtest-requirements.txt
+commands=
+	pytest ./tests/integration --lambda-stack {env:STACK_NAME} {posargs}
